--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-03  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Added Catalan translation by
+	Xavier Conde Rueda <xaviconde@eresmas.com>.
+
 Mon Oct 27 20:46:25 2003  Tim Janik  <timj@gtk.org>
 
 	* ru.po: added russian translation from Alexandre Prokoudine <avp@altlinux.ru>.
