--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Overview of Changes in BEAST/BSE 0.5.6:
+
+* Added Catalan translation [Xavier Conde Rueda]
+* Lots of translations updated
+
 Overview of Changes in BEAST/BSE 0.5.5:
 
 * New (or ported) modules:
