--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-09  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Added Greek translation.
+
 2003-11-03  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
