--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Overview of Changes in BEAST/BSE 0.5.6:
 
 * Added Catalan translation [Xavier Conde Rueda]
+* Added Greek translation [Kostas Papadimas]
 * Lots of translations updated
 
 Overview of Changes in BEAST/BSE 0.5.5:
