--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 Overview of Changes in BEAST/BSE 0.5.6:
 
+* Updated Serbian translation [Danilo Segan]
 * Added Catalan translation [Xavier Conde Rueda]
 * Added Greek translation [Kostas Papadimas]
-* Lots of translations updated
 
 Overview of Changes in BEAST/BSE 0.5.5:
 
