--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2003-11-16  Abel Cheung  <maddog@linux.org.hk>
 
 	* POTFILES.in: Add missing file and remove non-existant ones.
