--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sun Nov 16 17:56:50 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-module.cc: Escape user defined strings (like the blurb) from
+	the idl file. First step for support for records/sequences.
+
 Wed Nov 12 04:21:32 2003  Tim Janik  <timj@gtk.org>
 
 	* glib-extra.[hc]: provide G_HASH_POINTER().
