--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 16 18:03:48 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* configure.in: Added plugins/evaluator/Makefile.am.
+
 Sun Nov 16 08:03:55 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gle-pull.sh:
