--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Sun Nov 16 18:03:48 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* evaluator/*: Added BseEvaluator, a module based on a small,
+	interpreted programming language which can compute expressions
+	like "output = input * 0.5 + 1".
+  
 Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>
 
         * *.*: changed "copyright" field of procedures, scripts and objects
