--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Sun Nov 16 18:13:26 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* Makefile.am: Added evaluator as subdirectory.
+
 Sun Nov 16 18:03:48 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* evaluator/*: Added BseEvaluator, a module based on a small,
